Adding routes embryo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,5 @@
-<header class="top" [class.nav-white]="scrolledUp && !scrollPositionTop" [class.nav-up]="!scrolledUp && !scrollPositionTop">
-  <a class="logo" href="/">
-    WEST CONSULTING
-    <img src="/assets/some-dark-logo.svg" class="logo-dark" alt="">
-    <img src="/assets/some-light-logo.svg" class="logo-light" alt="">
-  </a>
-  <nav>
-    <ul>
-      <li class=""><a href="/jobs">About</a></li>
-      <li class=""><a href="/about">Competences</a></li>
-      <li class=""><a href="/team">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+<app-header></app-header>
+<router-outlet></router-outlet>
 
 <!-- Begin page content -->
 <div class="container">
@@ -36,3 +24,5 @@
     <span class="text-muted">WEST CONSULTING</span>
   </div>
 </footer>
+
+<app-footer></app-footer>
