Logo and favicon fixes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,98 @@
-<p>
-  about works!
-</p>
+<div class="jumbotron boathouse">
+</div>
+
+
+<!-- Marketing messaging and featurettes
+   ================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
+
+<div class="container marketing pb-5">
+
+  <!-- START THE FEATURETTES -->
+
+  <div class="row featurette">
+    <div class="col-sm-7">
+      <h1>About the company</h1>
+      <p>
+        <span class="introduction">
+        West IT Consulting AB was founded in June, 2017 by me, Jonas Karlsson. The idea behind the
+        company is to provide
+        IT consulting services. The base for the company is in Gothenburg, Sweden.
+        </span>
+      </p>
+      <p>
+        My career started at WM-data (Logica -> CGI) and after 4 years I moved to Capgemini and stayed there for 8
+        years.
+        This means I have > 10 years of experience as a developer and Solution Architect. I enjoy booth frontend and
+        backend technologies and test driven development in a continuous delivery manner are fundamentals for me.
+      </p>
+      <p>
+        I prefer a role where I have time for coding but also to take responsibility in the overall solution, including
+        tight communication with the customer, creating design proposals, giving estimates and even do the scrum master
+        work.
+      </p>
+      <p>
+        My main personal characteristics are my high ambition, loyalty and a pragmatic approach in designing solutions
+        that are optimal for the customer.
+      </p>
+    </div>
+    <div class="col-sm-5">
+      <img class="featurette-image img-fluid mx-auto" src="../../assets/500X500/map_bw_500X500.png"
+           alt="Map Gothenburg">
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette pb-5">
+    <div class="col-sm-7 order-sm-2">
+      <h2 class="featurette-heading">Customer satisfaction</h2>
+      <p>
+        <span class="introduction">The most important thing.</span></p>
+      <p>
+        During my years at Capgemini, all my external
+        assignments was yearly rated by the customer through a Customer Satisfaction Index (CSI) survey. During the 5
+        years with external customers, the response from was (1-5 scale), 4, 5, 5, 5, 5. This means that the work has
+        been
+        done much beyond expectations. </p>
+      <p>
+        On my last project on Capgemini, where no CSI was applicable, the following was
+        said by my PM about my performance:</p>
+
+      <div class="quotation">
+        <p>
+          “"Jonas played a key role in setting up and developing the application for SKF. The work involved
+          architecture,
+          development, requirement digestion etc.
+        </p>
+        <p>
+          Jonas deep knowledge made him the backbone of all development in the project. As a senior he also assisted and
+          helped other developers in the team. As a PM I relied on Jonas in technical discussions and found him very
+          competent and experienced. A Solution Architect to trust and rely on."
+        </p>
+      </div>
+
+    </div>
+    <div class="col-sm-5 order-sm-1">
+      <img class="featurette-image img-fluid mx-auto" src="../../assets/500X500/rings_on_water.png"
+           alt="Rings on water">
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div id="contact" class="row">
+    <div class="col-sm-12">
+      <h2>Contact information</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <p>Please contact me for CV, references or if you just want to play a round of golf :)</p>
+
+      <a href="mailto:jonas@westc.se"><strong>jonas@westc.se</strong></a> +46734481886 <a
+      href="https://www.linkedin.com/in/jonas-karlsson-14b231a/"><strong>LinkedIn</strong></a>
+    </div>
+  </div>
+
+</div>
