--- a/src/app/competences/competences.component.html
+++ b/src/app/competences/competences.component.html
@@ -1,3 +1,40 @@
-<p>
-  competences works!
-</p>
+<div class="jumbotron sunset">
+</div>
+
+<div class="container pb-5">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>Competences</h1>
+    </div>
+  </div>
+  <div class="row top-border">
+    <div class="col-sm-4">
+      <h2>Solution Architect</h2>
+      <p>
+        Worked as architect for E2E solutions involving DB, Java EE stack, JBoss, Spring and front end.
+      </p>
+    </div>
+    <div class="col-sm-4">
+      <h2>
+        Fullstack Web Developer</h2>
+      <p>
+        Skilled developer within front end technologies like Javascript, Typescript, NodeJs, HTML5, Angular, Bootstrap
+        CSS and UX in general. And I’m naturally comfortable with the ecosystem surrounding these technologies like
+        Selenium/ProTractor, Jasmine, npm, grunt and Bower.
+      </p>
+    </div>
+    <div class="col-sm-4">
+      <h2>
+        Scrum master
+      </h2>
+      <p>
+        I’ve had the role as a scrum master and, most importantly, have long experience of working along with great
+        Scrum masters which given me a solid tool box for how agile scrum teams should be managed in the most efficient.
+      <p>
+        This makes me a appropriate agile leader.
+      </p>
+
+    </div>
+  </div>
+
+</div>
