--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
-<p>
-  footer works!
-</p>
+
+<footer class="footer top-border">
+  <div class="container">
+    <div class="text-center"><a routerLink="/about" fragment="contact"><strong>Contact me</strong></a> at West Consulting</div>
+  </div>
+</footer>
