--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,3 +1,49 @@
-<p>
-  landing works!
-</p>
+<!-- Begin page content -->
+
+
+<div class="jumbotron sea">
+  <div class="container">
+    <div class="mt-3">
+      <h1 class="text-center">Architecture<br/>Development<br/>Agile leadership</h1>
+    </div>
+  </div>
+  <div class="sky">
+    <div class="big_cloud" style="background:url(../../assets/animations/big_cloud.png)"></div>
+    <div class="stretched_cloud" style="background:url(../../assets/animations/stretched_cloud.png)"></div>
+    <div class="small_clouds" style="background:url(../../assets/animations/small_clouds.png)"></div>
+  </div>
+</div>
+
+
+<!-- Marketing messaging and featurettes
+   ================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
+
+<div class="container marketing">
+
+  <!-- START THE FEATURETTES -->
+
+  <div class="row featurette clickable" (click)="routeTo('about')">
+    <div class="col-sm-7">
+      <h2 class="featurette-heading text-right font-italic">"A Solution Architect to trust and rely on"
+      </h2>
+      <p class="text-right">- PM</p>
+      <p class="lead">Learn more about me and the company.</p>
+    </div>
+    <div class="col-sm-5">
+      <img class="featurette-image img-fluid mx-auto" src="../../assets/500X500/jonas_500x500.jpg" alt="Jonas image">
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+
+  <div class="jumbotron code text-center clickable" (click)="routeTo('competences')">
+    <h2 class="featurette-heading">Full Stack Web Developer, Solution Architect, Scrum master</h2>
+    <p class="lead">Find out what role I can have in your business.</p>
+    <p><a class="btn btn-lg btn-west-consulting" routerLink="/competences" role="button">Read more</a></p>
+  </div>
+
+
+</div>
+
