Logo and favicon fixes

--- a/src/app/competences/competences.component.html
+++ b/src/app/competences/competences.component.html
@@ -2,20 +2,19 @@
 </div>
 
 <div class="container pb-5">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Competences</h1>
-    </div>
-  </div>
-  <div class="row top-border">
-    <div class="col-sm-4">
-      <h2>Solution Architect</h2>
       <p>
-        Worked as architect for E2E solutions involving DB, Java EE stack, JBoss, Spring and front end.
+        <span class="introduction">
+          My experiences and competencies spreads across a wide range of the system development process.
+          </span>
       </p>
-    </div>
-    <div class="col-sm-4">
-      <h2>
+      <h2 class="pt-3">Solution Architect</h2>
+      <p>
+        For me this role means E2E a responsibility for a solution. I've had this role in several projects involving
+        Java EE, JBoss, Spring, databases and front end.
+      </p>
+    <div class="row">
+    <div class="col-sm-6">
+      <h2 class="pt-3">
         Fullstack Web Developer</h2>
       <p>
         Skilled developer within front end technologies like Javascript, Typescript, NodeJs, HTML5, Angular, Bootstrap
@@ -23,8 +22,10 @@
         Selenium/ProTractor, Jasmine, npm, grunt and Bower.
       </p>
     </div>
-    <div class="col-sm-4">
-      <h2>
+    <div class="col-sm-6">
+      <img class="img-fluid" src="../../assets/full_stack_developer.jpg">
+    </div>
+      <h2 class="pt-3">
         Scrum master
       </h2>
       <p>
@@ -33,8 +34,43 @@
       <p>
         This makes me a appropriate agile leader.
       </p>
-
-    </div>
   </div>
+
+  <hr class="featurette-divider">
+    <h2>Professional characteristics and experience</h2>
+    <h3 class="pt-3">
+      Customer focus and great commitment
+    </h3>
+    <p>
+      Independently of what technology or what type of system I’m involved in building, I always have great customer
+      focus on what should be delivered. This is typically expressed in open discussions and clarifications around the
+      solution and the requirements.
+    </p>
+    <h3 class="pt-3">
+      Enterprise experience
+    </h3>
+    <p>
+      I’ve worked with large international companies with high demands in terms of performance, scalability and SEO.
+    </p>
+    <h3 class="pt-3">
+      CMS (Content Management System) knowledge
+    </h3>
+    <p>
+      The pattern between many major CMS systems are the same. A content manager needs to be able to populate a website
+      and distribute it to several markets in an efficient ways.
+      Tridion
+    <p>
+    <h3 class="pt-3">
+      Estimations / bidding
+    </h3>
+    <p>
+      I’ve been working with the process of giving high level estimates and technical design proposals.
+    <p>
+    <h3 class="pt-3">
+      Test driven mentality
+    </h3>
+    <p>
+      The mental conviction of the Continuous delivery
+    <p>
 
 </div>
