--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -24,13 +24,13 @@
   <!-- START THE FEATURETTES -->
 
   <div class="row featurette clickable" (click)="routeTo('about')">
-    <div class="col-sm-7">
+    <div class="col-7">
       <h2 class="featurette-heading text-right font-italic">"A Solution Architect to trust and rely on"
       </h2>
       <p class="text-right">- PM</p>
-      <p class="lead">Learn more about me and the company.</p>
+      <p class="text-right"><a class="btn btn-sm btn-west-consulting" routerLink="/about" role="button">Learn more</a></p>
     </div>
-    <div class="col-sm-5">
+    <div class="col-5">
       <img class="featurette-image img-fluid mx-auto" src="../../assets/500X500/jonas_500x500.jpg" alt="Jonas image">
     </div>
   </div>
@@ -41,7 +41,7 @@
   <div class="jumbotron code text-center clickable" (click)="routeTo('competences')">
     <h2 class="featurette-heading">Full Stack Web Developer, Solution Architect, Scrum master</h2>
     <p class="lead">Find out what role I can have in your business.</p>
-    <p><a class="btn btn-lg btn-west-consulting" routerLink="/competences" role="button">Read more</a></p>
+    <p><a class="btn btn-sm btn-west-consulting" routerLink="/competences" role="button">Read more</a></p>
   </div>
 
 
