--- a/src/app/styles/_bootstrap-extensions.scss
+++ b/src/app/styles/_bootstrap-extensions.scss
@@ -137,6 +137,13 @@ h1, h2, h3, h4, h5{
   }
 }
 
+@media only screen and (max-width: 400px) {
+  .jumbotron h1 {
+    font-size: 40px;
+    line-height: 1;
+  }
+}
+
 @media (min-width: 40em) {
    .featurette-heading {
     font-size: 50px;
