--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="top" [class.nav-white]="scrolledUp && !scrollPositionTop" [class.nav-up]="!scrolledUp && !scrollPositionTop">
   <a class="logo" routerLink="/">
-    <img src="/assets/logos/logo_blue.png" class="logo-dark" alt="">
+    <img src="/assets/logos/short_logo.png" class="logo-dark" alt="">
   </a>
 
   <nav>
