--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,4 +1,4 @@
-$west-consulting-blue : #a5d9f1;
-$west-consulting-blue-darker : #8cbad0;
-$west-consulting-black-text-color : #222;
+$west-consulting-blue : #a2cfe1;
+$west-consulting-blue-darker : #93bfd1;
+$west-consulting-black-text-color : rgb(77,77,79);
 $west-consulting-border-color : #979797;
