--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -46,7 +46,7 @@
 
   <div class="row featurette pb-5">
     <div class="col-sm-7 order-sm-2">
-      <h2 class="featurette-heading">Customer satisfaction</h2>
+      <h2>Customer satisfaction</h2>
       <p>
         <span class="introduction">The most important thing.</span></p>
       <p>
