--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,10 +2,8 @@
 
 
 <div class="jumbotron sea">
-  <div class="container">
-    <div class="mt-3">
-      <h1 class="text-center">Architecture<br/>Development<br/>Agile leadership</h1>
-    </div>
+  <div class="mt-3">
+    <h1 class="text-center">Architecture<br/><br/>Development<br/><br/>Agile leadership</h1>
   </div>
   <div class="sky">
     <div class="big_cloud" style="background:url(../../assets/animations/big_cloud.png)"></div>
@@ -14,36 +12,37 @@
   </div>
 </div>
 
-
 <!-- Marketing messaging and featurettes
    ================================================== -->
 <!-- Wrap the rest of the page in another container to center all the content. -->
 
-<div class="container marketing">
 
   <!-- START THE FEATURETTES -->
 
-  <div class="row featurette clickable" (click)="routeTo('about')">
-    <div class="col-7">
-      <h2 class="featurette-heading text-right font-italic">"A Solution Architect to trust and rely on"
+  <div class="row">
+    <div class="col-md-6 sunny-background text-center clickable" (click)="routeTo('competences')">
+      <h2 class="featurette-heading black-text">Find out what role I can take in your business.</h2>
+      <p><a class="btn btn-sm btn-west-consulting" routerLink="/competences" role="button">Explore</a></p>
+    </div>
+    <div class="col-md-6 westc-black-background text-white featurette clickable" (click)="routeTo('about')">
+      <div class="text-center clickable" (click)="routeTo('competences')">
+        <h2 class="featurette-heading">Learn more about me and the company</h2>
+        <p><a class="btn btn-sm btn-west-consulting" routerLink="/about" role="button">Explore</a></p>
+      </div>
+    </div>
+  </div>
+<div class="container">
+  <div class="row clickable" (click)="routeTo('about')">
+    <div class="col-6 col-lg-6">
+      <div class="pt-md-5">
+      <h2 class="quoted-heading text-right font-italic">"A Solution Architect to trust and rely on"
       </h2>
-      <p class="text-right">- PM</p>
-      <p class="text-right"><a class="btn btn-sm btn-west-consulting" routerLink="/about" role="button">Learn more</a></p>
+      <p class="text-right">- Project Manager</p>
+      </div>
     </div>
-    <div class="col-5">
-      <img class="featurette-image img-fluid mx-auto" src="../../assets/500X500/jonas_500x500.jpg" alt="Jonas image">
+    <div class="col-6 col-lg-6">
+      <img class="featurette-image img-fluid mx-auto" src="../../assets/500X500/jonas_500x500.jpg"
+           alt="Jonas image">
     </div>
   </div>
-
-  <hr class="featurette-divider">
-
-
-  <div class="jumbotron code text-center clickable" (click)="routeTo('competences')">
-    <h2 class="featurette-heading">Full Stack Web Developer, Solution Architect, Scrum master</h2>
-    <p class="lead">Find out what role I can have in your business.</p>
-    <p><a class="btn btn-sm btn-west-consulting" routerLink="/competences" role="button">Read more</a></p>
-  </div>
-
-
 </div>
-
