--- a/src/app/styles/_bootstrap-extensions.scss
+++ b/src/app/styles/_bootstrap-extensions.scss
@@ -11,6 +11,13 @@ html {
   min-height: 100%;
 }
 
+@media only screen and (max-width: 768px) {
+  .container {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+
 .sea {
   background: #000 url("../../assets/banners/sea.jpg") center center;
 }
@@ -31,17 +38,30 @@ html {
   background: #000 url("../../assets/code.png") center center;
 }
 
+.sunny-background {
+  background: rgb(247, 231, 201);
+  //background: #d8c7ab;
+}
+
+.westc-black-background {
+  background: $west-consulting-black-text-color;
+}
+
+.black-text {
+  color: $west-consulting-black-text-color;
+}
+
 .jumbotron {
   position: relative;
   width: 100%;
   height: 100%;
-  min-height: 350px;
+  min-height: 400px;
   background-size: cover;
   overflow: hidden;
   color: white;
   opacity: 1;
   border-radius: 0;
-  margin-bottom: 4rem;
+  margin-bottom:0;
 }
 
 @media (min-width: 576px) {
@@ -50,21 +70,19 @@ html {
   }
 }
 
-h1, h2, h3, h4, h5{
+h1, h2, h3, h4, h5 {
   font-family: 'Tiempos-Headline-Black', 'Arial', sans-serif;
 }
 
 .btn-west-consulting {
   color: #fff;
   background-color: $west-consulting-blue;
-  border-color: #8cbad0;
 }
 
 .btn-west-consulting:hover {
   color: #fff;
   background: $west-consulting-blue-darker;
-  }
-
+}
 
 .display-3 {
   font-size: 2.5rem;
@@ -110,56 +128,78 @@ h1, h2, h3, h4, h5{
   font-weight: 300;
   line-height: 1;
   letter-spacing: -.05rem;
+  margin: 2rem;
 }
-
 
 .jumbotron h1 {
-    font-size: 100px;
-    line-height: 1.5;
+  font-size: 35px; // Looks good on iPhone 5 (320px width)
+  padding-top: 80px;
+  line-height: 0.7;
 }
 
+.quoted-heading {
+  margin-top: 2rem;
+}
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
-@media only screen and (max-width: 768px) {
-  .jumbotron h1 {
-    font-size: 70px;
-    line-height: 1.5;
-    padding-top: 50px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
+@media only screen and (min-width: 400px) {
   .jumbotron h1 {
     font-size: 50px;
-    line-height: 1;
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (min-width: 500px) {
   .jumbotron h1 {
-    font-size: 40px;
-    line-height: 1;
+    font-size: 60px;
+  }
+}
+
+@media only screen and (min-width: 730px) {
+  .jumbotron h1 {
+    font-size: 100px;
+    padding-top: 50px;
+    .container {
+      margin: 0;
+    }
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .jumbotron h1 {
+    font-size: 180px;
+    padding-top: 50px;
+    .container {
+      margin: 0;
+    }
   }
 }
 
 @media (min-width: 40em) {
-   .featurette-heading {
+  .featurette-heading {
     font-size: 50px;
+    margin: 4rem;
+  }
+  .quoted-heading {
+    font-size: 50px;
+    margin-top: 4rem;
   }
 }
 
 @media (min-width: 62em) {
   .featurette-heading {
+    margin: 7rem;
+  }
+  .quoted-heading {
     margin-top: 7rem;
   }
 }
 
 p .introduction {
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 42px;
+  font-weight: 300;
+  font-size: 30px;
+  line-height: 42px;
 }
 
 .quotation {
