--- a/src/app/competences/competences.component.html
+++ b/src/app/competences/competences.component.html
@@ -1,76 +1,114 @@
-<div class="jumbotron sunny-background">
+<div class="jumbotron birds">
 </div>
 
-<div class="container pb-5">
-      <p>
+<div class="container-fluid sunny-background">
+  <div class="row">
+    <div class="container">
+      <div class="row pt-5">
+        <h1>Competences</h1>
+        <p>
         <span class="introduction">
-          My experiences and competencies spreads across a wide range of the system development process.
-          </span>
-      </p>
-      <h2 class="pt-3">Solution Architect</h2>
-      <p>
-        For me this role means E2E a responsibility for a solution. I've had this role in several projects involving
-        Java EE, JBoss, Spring, databases and front end.
-      </p>
-    <div class="row">
-    <div class="col-sm-6">
-      <h2 class="pt-3">
-        Fullstack Web Developer</h2>
-      <p>
-        Skilled developer within front end technologies like Javascript, Typescript, NodeJs, HTML5, Angular, Bootstrap
-        CSS and UX in general. And I’m naturally comfortable with the ecosystem surrounding these technologies like
-        Selenium/ProTractor, Jasmine, npm, grunt and Bower.
-      </p>
+          My experiences and competencies spreads across a wide range of the system development process, but can be divided into three main categories.
+        </span>
+        </p>
+      </div>
+      <div class="row">
+        <div class="col-md-4 text-black">
+          <h2 class="pt-3">Solution Architect</h2>When I've had this role it has included:
+          <ul>
+            <li>E2E a responsibility for a solution</li>
+            <li>Leadership in distributed teams sitting around the world with an international Customer acting in many
+              markets
+            </li>
+            <li>Be a part of estimations and bidding for new functionality</li>
+            <li>CMS Integrations</li>
+            <li>High demands in terms of performance, scalability and SEO</li>
+          </ul>
+        </div>
+        <div class="col-md-4 text-black">
+          <h2 class="pt-3">
+            Fullstack Web Developer</h2>
+          <p>
+            Skilled developer within front end technologies like Javascript, Typescript, NodeJs, HTML5, Angular,
+            Bootstrap
+            CSS and UX in general. And I’m naturally comfortable with the ecosystem surrounding these technologies like
+            Selenium/ProTractor, Jasmine, npm, grunt and Bower. Test driven mentality.
+          </p>
+        </div>
+        <div class="col-md-4 text-black">
+          <h2 class="pt-3">
+            Scrum master
+          </h2>
+          <p>
+            I’ve had the role as a scrum master and, most importantly, have long experience of working along with great
+            Scrum masters which given me a solid tool box for how agile scrum teams should be managed in the most
+            efficient.
+          <p>
+            This makes me a appropriate agile leader.
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-6">
-      <img class="img-fluid" src="../../assets/full_stack_developer.jpg">
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="container westc-blue-background text-white">
+          <div class="row pt-5">
+
+            <div class="col-md-8 p-5">
+              <h2>Customer focus and great commitment</h2>
+              <p>
+                <span class="introduction">That's my key characteristics</span></p>
+              <p>
+              <p>
+                Independently of what technology or what type of system I’m involved in building, I always have great
+                customer
+                focus on what should be delivered.
+              </p>
+              During my years at Capgemini, all my external assignments rated by the customer through a Customer
+              Satisfaction
+              Index (CSI) survey. During the five
+              years with external customers, the feedback was 4, 5, 5, 5, 5 on a 1-5 scale.
+            </div>
+
+
+            <div class="col-md-4 p-5 align-self-center">
+              <blockquote class="blockquote blockquote-reverse">
+                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                  ante.</p>
+                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
+                </footer>
+              </blockquote>
+
+              <blockquote class="blockquote">
+                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                  ante.</p>
+                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
+                </footer>
+              </blockquote>
+              <div class="quotation westc-blue-text">
+                "Jonas deep knowledge made him the backbone of all development in the project. As a senior he also
+                assisted
+                and
+                helped other developers in the team.<br><br>As a PM I relied on Jonas in technical discussions and found
+                him
+                very
+                competent and experienced. A Solution Architect to trust and rely on."
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-      <h2 class="pt-3">
-        Scrum master
-      </h2>
-      <p>
-        I’ve had the role as a scrum master and, most importantly, have long experience of working along with great
-        Scrum masters which given me a solid tool box for how agile scrum teams should be managed in the most efficient.
-      <p>
-        This makes me a appropriate agile leader.
-      </p>
   </div>
-
-  <hr class="featurette-divider">
-    <h2>Professional characteristics and experience</h2>
-    <h3 class="pt-3">
-      Customer focus and great commitment
-    </h3>
-    <p>
-      Independently of what technology or what type of system I’m involved in building, I always have great customer
-      focus on what should be delivered. This is typically expressed in open discussions and clarifications around the
-      solution and the requirements.
-    </p>
-    <h3 class="pt-3">
-      Enterprise experience
-    </h3>
-    <p>
-      I’ve worked with large international companies with high demands in terms of performance, scalability and SEO.
-    </p>
-    <h3 class="pt-3">
-      CMS (Content Management System) knowledge
-    </h3>
-    <p>
-      The pattern between many major CMS systems are the same. A content manager needs to be able to populate a website
-      and distribute it to several markets in an efficient ways.
-      Tridion
-    <p>
-    <h3 class="pt-3">
-      Estimations / bidding
-    </h3>
-    <p>
-      I’ve been working with the process of giving high level estimates and technical design proposals.
-    <p>
-    <h3 class="pt-3">
-      Test driven mentality
-    </h3>
-    <p>
-      The mental conviction of the Continuous delivery
-    <p>
-
+</div>
+<div class="row">
+  <div class="col-md-12 westc-black-background text-white featurette clickable" (click)="routeTo('about')">
+    <div class="text-center clickable" (click)="routeTo('competences')">
+      <h2 class="featurette-heading">Learn more about me and the company</h2>
+      <div class="call-to-action">
+        <a routerLink="/about"><span>Read more</span></a>
+      </div>
+    </div>
+  </div>
 </div>
