--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,8 @@
-
-<footer class="footer top-border">
+<footer class="footer">
   <div class="container">
-    <div class="text-center"><a routerLink="/about" fragment="contact"><strong>Contact me</strong></a> at West Consulting</div>
+    <p>copyright © 2017 by <a href="http://www.westc.se">westc.se</a> | <span>
+      <a routerLink="/about" fragment="contact"><strong>Contact me</strong></a> at West
+      Consulting
+    </span>
   </div>
 </footer>
