--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,4 +1,5 @@
-$west-consulting-blue : #a2cfe1;
-$west-consulting-blue-darker : #93bfd1;
-$west-consulting-black-text-color : rgb(77,77,79);
+$west-consulting-blue : #93bfd1;
+$west-consulting-blue-darker : #7294a6;
+$west-consulting-black-text-color : #4d4d4f;
 $west-consulting-border-color : #979797;
+$west-consulting-sand: #F7E7C9;
