--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,10 @@
   <a class="logo" routerLink="/">
     <img src="/assets/logos/short_logo.png" class="logo-dark" alt="">
   </a>
-
   <nav>
-    <ul><li class=""><a routerLink="/about">About</a></li>
+    <ul>
       <li class=""><a routerLink="/competences">Competences</a></li>
+      <li class=""><a routerLink="/about">About</a></li>
     </ul>
   </nav>
 </header>
