--- a/src/app/styles/_bootstrap-extensions.scss
+++ b/src/app/styles/_bootstrap-extensions.scss
@@ -3,12 +3,16 @@
 body {
   font-family: 'SourceSansPro-Regular', 'Arial', sans-serif;
   color: $west-consulting-black-text-color;
-  margin-bottom: 60px;
+  margin-bottom: 120px;
 }
 
 html {
   position: relative;
   min-height: 100%;
+}
+
+.row {
+  margin: 0;
 }
 
 @media only screen and (max-width: 768px) {
@@ -29,6 +33,10 @@ html {
 .boathouse {
   background: #000 url("../../assets/banners/boat_house.jpg") center center;
 }
+.birds {
+  background: #000 url("../../assets/banners/birds.jpg") center center;
+}
+
 
 .map {
   background: #000 url("../../assets/map_got_bw_black.png") center center;
@@ -36,34 +44,81 @@ html {
 
 .code {
   background: #000 url("../../assets/code.png") center center;
+  background-size: cover;
 }
 
 .sunny-background {
-  background: rgb(247, 231, 201);
-  //background: #d8c7ab;
+  background: $west-consulting-sand;
+}
+
+.gbg-map {
+  background: url("../../assets/banners/map_got_bw_transparent.png") center center;
+  background-size: cover;
 }
 
 .westc-black-background {
   background: $west-consulting-black-text-color;
 }
 
+.westc-blue-background {
+  background: $west-consulting-blue;
+}
+
 .black-text {
   color: $west-consulting-black-text-color;
+}
+
+.westc-blue-text {
+  color: $west-consulting-blue-darker;
 }
 
 .jumbotron {
   position: relative;
   width: 100%;
   height: 100%;
-  min-height: 400px;
+  min-height: 450px;
   background-size: cover;
   overflow: hidden;
   color: white;
   opacity: 1;
   border-radius: 0;
-  margin-bottom:0;
+  margin-bottom: 0;
 }
 
+.call-to-action {
+  border: 2px solid $west-consulting-blue;
+  background-color: $west-consulting-blue;
+  border-radius: 60px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+  margin: 40px auto 60px;
+  line-height: 54px;
+  vertical-align: middle;
+  padding: 0 60px;
+  text-transform: uppercase;
+  display: inline-block;
+  letter-spacing: 2px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.call-to-action a {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  display: inline-block;
+}
+
+.call-to-action:hover {
+  border: 2px solid #fff;
+  background-color: transparent
+}
+
+.white-box-with-shadow {
+  background: white;
+  box-shadow: 0 10px 30px rgba(0,0,0,.19), 0 6px 10px rgba(0,0,0,.23);
+}
 @media (min-width: 576px) {
   .jumbotron {
     padding: 8rem 2rem;
@@ -138,7 +193,8 @@ h1, h2, h3, h4, h5 {
 }
 
 .quoted-heading {
-  margin-top: 2rem;
+  margin: 2rem 0 0 1rem;
+  font-size: 25px;
 }
 
 /* RESPONSIVE CSS
@@ -182,7 +238,7 @@ h1, h2, h3, h4, h5 {
     margin: 4rem;
   }
   .quoted-heading {
-    font-size: 50px;
+    font-size: 30px;
     margin-top: 4rem;
   }
 }
@@ -192,6 +248,7 @@ h1, h2, h3, h4, h5 {
     margin: 7rem;
   }
   .quoted-heading {
+    font-size: 30px;
     margin-top: 7rem;
   }
 }
