--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,7 +3,7 @@
 
 <div class="jumbotron sea">
   <div class="mt-3">
-    <h1 class="text-center">Architecture<br/><br/>Development<br/><br/>Agile leadership</h1>
+    <h1 class="text-center fadeIn">Architecture<br/><br/>Development<br/><br/>Agile leadership</h1>
   </div>
   <div class="sky">
     <div class="big_cloud" style="background:url(../../assets/animations/big_cloud.png)"></div>
