--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,87 @@
 <div class="jumbotron boathouse">
+  <div class="mt-5 fadeIn">
+    <h1 class="westc-text-color">About me and the company</h1>
+  </div>
 </div>
 
 
+<section class="has-padding">
+  <div class="container">
+    <div class="row">
+      <span class="text-center w-100">
+      <h3>Some History</h3>
+        </span>
+      <div class="col-md-12">
+        <p>
+          Hi, I’m Jonas Karlsson, a Solution architect and developer from Gothenburg, Sweden.
+        </p>
+        <p>
+          I started West Consulting, or westc, in June 2017. My IT career started at WM-data (Logica -> CGI) at 2005 and
+          after 4 years I moved to Capgemini and stayed there for 8 years after starting my own business.
+        </p>
+        <p>
+          This means > 10
+          years of experience as a developer and Solution Architect.
+          Go to the <a routerLink="/about" fragment="westc-footer" class="westc-blue-text">bottom</a> of the page for contact information.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="has-padding alternative-bg">
+  <div class="container">
+    <div class="row">
+      <span class="text-center w-100">
+      <h3>Personal Characteristics</h3>
+        </span>
+      <div class="col-md-12">
+        <p>
+          I enjoy booth frontend and backend technologies and test driven development in a continuous delivery manner
+          are fundamentals for me.
+        </p>
+        <p>
+          I prefer a role where I have time for coding but also to take responsibility in the overall solution,
+          including tight communication with the customer, creating design proposals, giving estimates and even do the
+          scrum master work.
+        </p>
+        <p>
+          Independently of what technology or what type of system I’m involved in building, I always have great customer
+          focus on what should be delivered.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="has-padding">
+  <div class="container">
+    <div class="row">
+      <span class="text-center w-100">
+      <h3>References</h3>
+        </span>
+      <div class="col-md-12">
+        <p>
+          During my years at Capgemini, all my external assignments rated by the customer through a Customer
+          Satisfaction Index (CSI) survey. During the years, the majority of the feedback has extremely positive.
+        </p>
+        <p>
+          "Jonas deep knowledge made him the backbone of all development in the project. As a senior he also assisted
+          and helped other developers in the team.
+          As a PM I relied on Jonas in technical discussions and found him very competent and experienced. A Solution
+          Architect to trust and rely on."
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="has-padding sunny-background text-center clickable" (click)="routeTo('competences')">
+  <h2 class="featurette-heading westc-text-color">Find out what I can do in your business</h2>
+  <div class="call-to-action">
+    <a routerLink="/competences"><span>Read more</span></a>
+  </div>
+</section>
+
+<!--
 <div class="container-fluid westc-blue-background">
   <div class="row">
     <div class="container">
@@ -76,9 +156,12 @@
 
 <div class="row">
   <div class="col-md-12 sunny-background text-center clickable" (click)="routeTo('competences')">
-    <h2 class="featurette-heading black-text">Find out what I can do in your business</h2>
+    <h2 class="featurette-heading westc-text-color">Find out what I can do in your business</h2>
     <div class="call-to-action">
       <a routerLink="/competences"><span>Read more</span></a>
     </div>
   </div>
+
+
 </div>
+-->
