--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,15 @@
-<footer class="footer">
+<footer class="footer alternative-bg" id="westc-footer">
   <div class="container">
-    <p>copyright © 2017 by <a href="http://www.westc.se">westc.se</a> | <span>
-      <a routerLink="/about" fragment="contact"><strong>Contact me</strong></a> at West
-      Consulting
-    </span>
+    <div class="row">
+      <div class="col-md-12 text-center has-padding">
+        <img src="/assets/logos/short_logo.png" class="footer-logo" alt="westc">
+        <div><h3>Contact me</h3></div>
+        <ul>
+          <li><a href="mailto:jonas@westc.se">Email</a></li>
+          <li><a href="https://www.linkedin.com/in/jonas-karlsson-14b231a/">LinkedIn</a></li>
+        </ul>
+        <p class="credit">© 2017 westc.</p>
+      </div>
+    </div>
   </div>
 </footer>
