--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,6 +1,10 @@
 @import "../styles/variables.scss";
+@import "../styles/fade-in.scss";
 
-
+.teaser {
+  font-size: 30px;
+  line-height: 28px;
+}
 
 
 
