--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,5 +1,9 @@
 $west-consulting-blue : #93bfd1;
 $west-consulting-blue-darker : #7294a6;
-$west-consulting-black-text-color : #4d4d4f;
+$west-consulting-logo-grey : #949095;
+//$west-consulting-black-text-color : #4d4d4f;
+$west-consulting-black-text-color : #3F4D59;
+//$west-consulting-black-text-color : #5F6D7E; //finlan
 $west-consulting-border-color : #979797;
 $west-consulting-sand: #F7E7C9;
+$west-consulting-light-gray-bg-color: #F6F9FA;
