--- a/src/app/competences/competences.component.html
+++ b/src/app/competences/competences.component.html
@@ -1,6 +1,157 @@
 <div class="jumbotron birds">
+  <div class="mt-5 fadeIn">
+    <h1>What I can do in your business</h1>
+  </div>
 </div>
 
+<section class="has-padding">
+  <div class="container">
+    <div class="row">
+      <span class="text-center w-100">
+      <h3>Different roles I had</h3>
+        </span>
+      <div class="col-md-12">
+        <h4>Solution Architect</h4>
+        <p>
+          When I've had this role it has included:
+        </p>
+        <ul>
+          <li>
+            E2E a responsibility for a solution
+          </li>
+          <li>
+            Leadership in distributed teams sitting around the world with an international Customer acting in many
+            markets
+          </li>
+          <li>
+            High demands in terms of performance, scalability and SEO
+          </li>
+          <li>
+            Be a part of estimations and bidding for new functionality and new solutions
+          </li>
+        </ul>
+
+        <h4>Fullstack Web Developer</h4>
+        <p>
+          Skilled developer within front end technologies like Javascript, Typescript, NodeJs, HTML5, Angular, Bootstrap
+          CSS and UX in general. And I’m naturally comfortable with the ecosystem surrounding these technologies like
+          Selenium/ProTractor, Jasmine, npm, grunt and Bower. Test driven mentality.
+        </p>
+        <h4>Scrum master</h4>
+        <p>
+          I’ve had the role as a scrum master and, most importantly, have long experience of working along with great
+          Scrum masters which given me a solid tool box for how agile scrum teams should be managed in the most
+          efficient way.
+        <p>
+          This makes me an appropriate agile leader.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="has-padding alternative-bg">
+  <div class="container">
+    <div class="row">
+      <span class="text-center w-100">
+      <h3>Selection areas I recently worked with</h3>
+        </span>
+      <div class="col-md-4">
+        <h4>Backend</h4>
+        <ul>
+          <li>
+            Java 8
+          </li>
+          <li>
+            Spring 4
+          </li>
+          <li>
+            Node.js
+          </li>
+          <li>
+            Microservice Architecture
+          </li>
+          <li>
+            Apache Solr
+          </li>
+          <li>
+            Oracle
+          </li>
+          <li>
+            Postgres
+          </li>
+          <li>
+            MongoDB
+          </li>
+          <li>
+            Postgres
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-md-4">
+        <h4>Front end</h4>
+        <ul>
+          <li>
+            Angular 4
+          </li>
+          <li>
+            Bootstrap 4
+          </li>
+          <li>
+            JavaScript (ES6) / TypeScript
+          </li>
+          <li>
+            HTML5
+          </li>
+          <li>
+            CSS3 / SCSS
+          </li>
+          <li>
+            UI / UX
+          </li>
+          <li>
+            Responsive design
+          </li>
+          <li>
+            Map and Geocode integrations: Google, Here, Bing, OSM, Autonavi
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h4>Methodologies and tools</h4>
+        <ul>
+          <li>
+            SEO optimization
+          </li>
+          <li>
+            Scrum / Kanban processes
+          </li>
+          <li>
+            AWS
+          </li>
+          <li>
+            Docker
+          </li>
+          <li>
+            Git
+          </li>
+          <li>
+            Tridion CMS
+          </li>
+          <li>
+            Jira
+          </li>
+          <li>
+            Confluence
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--
 <div class="container-fluid sunny-background">
   <div class="row">
     <div class="container">
@@ -102,6 +253,7 @@
     </div>
   </div>
 </div>
+
 <div class="row">
   <div class="col-md-12 westc-black-background text-white featurette clickable" (click)="routeTo('about')">
     <div class="text-center clickable" (click)="routeTo('competences')">
@@ -112,3 +264,12 @@
     </div>
   </div>
 </div>
+-->
+<section class="has-padding westc-black-background text-white featurette clickable" (click)="routeTo('about')">
+  <div class="text-center clickable" (click)="routeTo('competences')">
+    <h2 class="featurette-heading">Learn more about me and the company</h2>
+    <div class="call-to-action">
+      <a routerLink="/about"><span>Read more</span></a>
+    </div>
+  </div>
+</section>
