--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,10 +1,25 @@
 @import "../styles/variables.scss";
 
-
 footer {
-  position: absolute;
-  bottom: 0;
+  display: block;
   width: 100%;
-  height: 120px;
-  line-height: 120px;
+  .footer-logo {
+    margin-bottom: 10px;
+    width: 100px;
+  }
+
+  ul li {
+    display: inline-block;
+    letter-spacing: 1.3px;
+  }
+
+  ul {
+    padding: 0;
+    margin: 0 0 40px 0;
+  }
+  ul li:not(:first-of-type):before {
+    margin-right: 10px;
+    margin-left: 10px;
+    content: '/ ';
+  }
 }
