--- a/src/app/styles/_bootstrap-extensions.scss
+++ b/src/app/styles/_bootstrap-extensions.scss
@@ -2,8 +2,8 @@
 
 body {
   font-family: 'SourceSansPro-Regular', 'Arial', sans-serif;
-  color: $west-consulting-black-text-color;
-  margin-bottom: 120px;
+  color: $west-consulting-logo-grey;
+  font-size: 20px;
 }
 
 html {
@@ -33,10 +33,10 @@ html {
 .boathouse {
   background: #000 url("../../assets/banners/boat_house.jpg") center center;
 }
+
 .birds {
   background: #000 url("../../assets/banners/birds.jpg") center center;
 }
-
 
 .map {
   background: #000 url("../../assets/map_got_bw_black.png") center center;
@@ -57,60 +57,31 @@ html {
 }
 
 .westc-black-background {
-  background: $west-consulting-black-text-color;
+  background: $west-consulting-logo-grey;
 }
 
 .westc-blue-background {
   background: $west-consulting-blue;
 }
 
-.black-text {
-  color: $west-consulting-black-text-color;
+.westc-text-color {
+  color: $west-consulting-logo-grey;
 }
 
 .westc-blue-text {
-  color: $west-consulting-blue-darker;
+  color: $west-consulting-blue;
 }
 
-.fadeIn {
-  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 2s; /* Firefox < 16 */
-  -ms-animation: fadein 2s; /* Internet Explorer */
-  -o-animation: fadein 2s; /* Opera < 12.1 */
-  animation: fadein 2s;
+.alternative-bg {
+  background: $west-consulting-light-gray-bg-color;
 }
 
-@keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+.has-padding {
+  padding: 150px 0;
 }
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
 
 .jumbotron {
+  text-align: center;
   position: relative;
   width: 100%;
   height: 100%;
@@ -133,12 +104,15 @@ html {
   margin: 40px auto 60px;
   line-height: 54px;
   vertical-align: middle;
-  padding: 0 60px;
-  text-transform: uppercase;
+  padding: 0 30px;
+  //text-transform: uppercase;
   display: inline-block;
   letter-spacing: 2px;
   text-align: center;
   cursor: pointer;
+  z-index: 2;
+  position: relative;
+
 }
 
 .call-to-action a {
@@ -155,16 +129,46 @@ html {
 
 .white-box-with-shadow {
   background: white;
-  box-shadow: 0 10px 30px rgba(0,0,0,.19), 0 6px 10px rgba(0,0,0,.23);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, .19), 0 6px 10px rgba(0, 0, 0, .23);
 }
+
 @media (min-width: 576px) {
   .jumbotron {
     padding: 8rem 2rem;
   }
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2 {
   font-family: 'Tiempos-Headline-Black', 'Arial', sans-serif;
+}
+
+h3, h4, h5 {
+  font-family: 'SourceSansPro-Regular', 'Arial', sans-serif;
+}
+
+h3 {
+  letter-spacing: 2.8px;
+  text-transform: uppercase;
+  border-bottom: 2px solid $west-consulting-blue;
+  display: inline-block;
+}
+
+ul {
+  list-style-position: outside;
+  list-style-type: circle;
+  padding-left: 20px;
+}
+
+section {
+  font-family: 'SourceSansPro-ExtraLight', 'Arial', sans-serif;
+  letter-spacing: 1.33px;
+  h3 {
+    margin-bottom: 40px;
+  }
+  p {
+    padding-bottom: 15px;
+  }
+
 }
 
 .btn-west-consulting {
@@ -213,11 +217,12 @@ h1, h2, h3, h4, h5 {
 .featurette-divider {
   margin: 5rem 0; /* Space out the Bootstrap <hr> more */
   border-top: 1px solid $west-consulting-border-color;
-  color: $west-consulting-black-text-color;
+  color: $west-consulting-logo-grey;
 }
 
 /* Thin out the marketing headings */
 .featurette-heading {
+  font-family: 'Tiempos-Headline-Black', 'Arial', sans-serif;
   font-weight: 300;
   line-height: 1;
   letter-spacing: -.05rem;
@@ -226,8 +231,6 @@ h1, h2, h3, h4, h5 {
 
 .jumbotron h1 {
   font-size: 35px; // Looks good on iPhone 5 (320px width)
-  padding-top: 80px;
-  line-height: 0.7;
 }
 
 .quoted-heading {
@@ -253,7 +256,6 @@ h1, h2, h3, h4, h5 {
 @media only screen and (min-width: 730px) {
   .jumbotron h1 {
     font-size: 100px;
-    padding-top: 50px;
     .container {
       margin: 0;
     }
@@ -262,8 +264,7 @@ h1, h2, h3, h4, h5 {
 
 @media only screen and (min-width: 1200px) {
   .jumbotron h1 {
-    font-size: 180px;
-    padding-top: 50px;
+    font-size: 120px;
     .container {
       margin: 0;
     }
@@ -303,7 +304,7 @@ p .introduction {
 }
 
 a {
-  color: $west-consulting-black-text-color;
+  color: $west-consulting-logo-grey;
 }
 
 a:hover {
